--- a/files/klipper-mcu-host.service
+++ b/files/klipper-mcu-host.service
@@ -1,13 +1,13 @@
 #Systemd service file for klipper-firmware
 [Unit]
 Description=Starts klipper-mcu-host on startup
-After=pinconfig.service
+After=klipper-pru.service
 
 [Install]
 WantedBy=multi-user.target
 
 [Service]
 Type=simple
-User=debian
+#User=debian
 RemainAfterExit=yes
-ExecStart=/home/debian/klipper-mcu-host.sh
+ExecStart=/usr/local/bin/klipper_mcu -w -r
